--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/ssr": "^21.0.2",
     "@primeuix/themes": "^2.0.2",
     "express": "^5.1.0",
+    "lucide-angular": "^0.556.0",
     "primeicons": "^7.0.0",
     "primeng": "^21.0.1",
     "rxjs": "~7.8.0",
