--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "vitest",
     "serve:ssr:canvas": "node dist/canvas/server/server.mjs",
     "lint": "ng lint",
     "prepare": "husky"
